# token22AMM

./: .gitignore  PROJECT_SUMMARY.md  README.md  complete-amm-program.rs  complete-transfer-hook.rs  improved-amm-program.rs  simple-amm-program.rs  transfer-hook-test.ts
token-2022-amm/: Anchor.toml  Cargo.toml  PROJECT_SUMMARY.md  README.md  program-keypair (2).json  token-2022-amm-keypair.json  token-hook-keypair.json
token-2022-amm/programs/token-2022-amm/: Cargo.toml
token-2022-amm/programs/token-2022-amm/src/: lib.rs
token-2022-amm/programs/token-hook/: Cargo.toml
token-2022-amm/programs/token-hook/src/: lib.rs
token-2022-amm/tests/: token-2022-amm.ts
token-2022-amm/ui/: package.json
token-2022-amm/ui/src/: App.tsx
token-2022-amm/ui/src/pages/: Home.tsx
ui/: package-lock.json  package.json
ui/app/: page.tsx
ui/app/docs/: page.tsx
