[package]
name = "token-2022-amm"
version = "0.1.0"
description = "AMM that supports Token-2022 with Transfer Hooks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_2022_amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token-2022 = { version = "3.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.6.3"
spl-tlv-account-resolution = "0.6.3"

